--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,160 @@
 /data/ZILL.xlsx
 /data/ZVEZ.xlsx
 /~$sber_chng.xlsx
+/data_vol/ABRD.xlsx
+/data_vol/AFKS.xlsx
+/data_vol/AFLT.xlsx
+/data_vol/AKRN.xlsx
+/data_vol/ALRS.xlsx
+/data_vol/AMEZ.xlsx
+/data_vol/APTK.xlsx
+/data_vol/AQUA.xlsx
+/data_vol/ARSA.xlsx
+/data_vol/ASSB.xlsx
+/data_vol/AVAN.xlsx
+/data_vol/BANE.xlsx
+/data_vol/BELU.xlsx
+/data_vol/BLNG.xlsx
+/data_vol/BRZL.xlsx
+/data_vol/BSPB.xlsx
+/data_vol/CBOM.xlsx
+/data_vol/CHGZ.xlsx
+/data_vol/CHKZ.xlsx
+/data_vol/CHMF.xlsx
+/data_vol/CHMK.xlsx
+/data_vol/CNTL.xlsx
+/data_vol/DIOD.xlsx
+/data_vol/DVEC.xlsx
+/data_vol/DZRD.xlsx
+/data_vol/ELTZ.xlsx
+/data_vol/FEES.xlsx
+/data_vol/FESH.xlsx
+/data_vol/GAZA.xlsx
+/data_vol/GAZP.xlsx
+/data_vol/GAZT.xlsx
+/data_vol/GCHE.xlsx
+/data_vol/GMKN.xlsx
+/data_vol/HYDR.xlsx
+/data_vol/IGST.xlsx
+/data_vol/INGR.xlsx
+/data_vol/IRAO.xlsx
+/data_vol/IRKT.xlsx
+/data_vol/ISKJ.xlsx
+/data_vol/JNOS.xlsx
+/data_vol/KAZT.xlsx
+/data_vol/KBSB.xlsx
+/data_vol/KCHE.xlsx
+/data_vol/KGKC.xlsx
+/data_vol/KLSB.xlsx
+/data_vol/KMAZ.xlsx
+/data_vol/KMEZ.xlsx
+/data_vol/KOGK.xlsx
+/data_vol/KRKN.xlsx
+/data_vol/KROT.xlsx
+/data_vol/KRSB.xlsx
+/data_vol/KTSB.xlsx
+/data_vol/KUBE.xlsx
+/data_vol/KUZB.xlsx
+/data_vol/KZOS.xlsx
+/data_vol/LIFE.xlsx
+/data_vol/LKOH.xlsx
+/data_vol/LNZL.xlsx
+/data_vol/LPSB.xlsx
+/data_vol/LSNG.xlsx
+/data_vol/LSRG.xlsx
+/data_vol/LVHK.xlsx
+/data_vol/MAGE.xlsx
+/data_vol/MAGN.xlsx
+/data_vol/MFGS.xlsx
+/data_vol/MGNT.xlsx
+/data_vol/MGNZ.xlsx
+/data_vol/MGTS.xlsx
+/data_vol/MISB.xlsx
+/data_vol/MOEX.xlsx
+/data_vol/MRKC.xlsx
+/data_vol/MRKK.xlsx
+/data_vol/MRKP.xlsx
+/data_vol/MRKS.xlsx
+/data_vol/MRKU.xlsx
+/data_vol/MRKV.xlsx
+/data_vol/MRKY.xlsx
+/data_vol/MRKZ.xlsx
+/data_vol/MRSB.xlsx
+/data_vol/MSNG.xlsx
+/data_vol/MSRS.xlsx
+/data_vol/MSTT.xlsx
+/data_vol/MTLR.xlsx
+/data_vol/MTSS.xlsx
+/data_vol/MVID.xlsx
+/data_vol/NAUK.xlsx
+/data_vol/NFAZ.xlsx
+/data_vol/NKHP.xlsx
+/data_vol/NKNC.xlsx
+/data_vol/NKSH.xlsx
+/data_vol/NLMK.xlsx
+/data_vol/NMTP.xlsx
+/data_vol/NNSB.xlsx
+/data_vol/NSVZ.xlsx
+/data_vol/NVTK.xlsx
+/data_vol/OGKB.xlsx
+/data_vol/PAZA.xlsx
+/data_vol/PHOR.xlsx
+/data_vol/PIKK.xlsx
+/data_vol/PLZL.xlsx
+/data_vol/PMSB.xlsx
+/data_vol/PRMB.xlsx
+/data_vol/RASP.xlsx
+/data_vol/RBCM.xlsx
+/data_vol/RDRB.xlsx
+/data_vol/RGSS.xlsx
+/data_vol/RKKE.xlsx
+/data_vol/ROLO.xlsx
+/data_vol/ROSB.xlsx
+/data_vol/ROSN.xlsx
+/data_vol/ROST.xlsx
+/data_vol/RTGZ.xlsx
+/data_vol/RTKM.xlsx
+/data_vol/RTSB.xlsx
+/data_vol/RUAL.xlsx
+/data_vol/RUSI.xlsx
+/data_vol/RZSB.xlsx
+/data_vol/SAGO.xlsx
+/data_vol/SARE.xlsx
+/data_vol/SBER.xlsx
+/data_vol/SELG.xlsx
+/data_vol/SFIN.xlsx
+/data_vol/SIBN.xlsx
+/data_vol/SNGS.xlsx
+/data_vol/STSB.xlsx
+/data_vol/SVAV.xlsx
+/data_vol/TASB.xlsx
+/data_vol/TATN.xlsx
+/data_vol/TGKA.xlsx
+/data_vol/TGKB.xlsx
+/data_vol/TGKN.xlsx
+/data_vol/TNSE.xlsx
+/data_vol/TORS.xlsx
+/data_vol/TRMK.xlsx
+/data_vol/TTLK.xlsx
+/data_vol/TUZA.xlsx
+/data_vol/UCSS.xlsx
+/data_vol/UKUZ.xlsx
+/data_vol/UNAC.xlsx
+/data_vol/UNKL.xlsx
+/data_vol/UPRO.xlsx
+/data_vol/URKZ.xlsx
+/data_vol/USBN.xlsx
+/data_vol/UTAR.xlsx
+/data_vol/VGSB.xlsx
+/data_vol/VJGZ.xlsx
+/data_vol/VLHZ.xlsx
+/data_vol/VRSB.xlsx
+/data_vol/VSMO.xlsx
+/data_vol/VSYD.xlsx
+/data_vol/VTBR.xlsx
+/data_vol/WTCM.xlsx
+/data_vol/YAKG.xlsx
+/data_vol/YKEN.xlsx
+/data_vol/YRSB.xlsx
+/data_vol/ZILL.xlsx
+/data_vol/ZVEZ.xlsx
